third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/incomplete-bin.stderr
TOML parse error at line 1, column 20
  |
1 | incomplete-bin = 0b
  |                    ^
invalid binary integer
